chore: 배포 전, 테스트